== Firebug Lite Change Log ==
2009-03-09 Azer Koculu <azer@kodfabrik.com>
  * firebug-lite.js: Removed getElementPosXY method.
		     Added toggle method to settings object.

2009-03-07 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Fixed issue 1554: Text nodes could not be accessed through the inspect button.

2009-03-07 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1566: Added firebug.env.targetWindow variable to hold target window

2009-03-06 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Changed default for firebug.env.detectFirebug to false
                     Fixed issue 1555: Ajax calls ... we should not assume that the same domain policy is applied, use try catch instead
                     Fixed Issue 1541: Add XHR tab to Firebug Lite popup window
    progress.gif:    Corrected mime type

2009-03-03 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js, firebug-lite.css, progress.gif: Fixed Issue 1544: Lite settings menu should have a "processing" gif

2009-02-21 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Fixed Issue 1542: FBLite F12 etc should dock the popup instead of hiding the panel

2009-02-21 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js, firebug-lite.css:
      o Issue 1513 ... added:
        - Settings dialog
        - Settings storage cookie (stores settings, panel height, popup window positions etc.)
        - firebug.env:
            openInPopup
            popupTop
            popupLeft
            popupWidth
            popupHeight
      o Various popup window bugfixes and performance improvements

2009-02-21 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js, firebug-lite.css, firebug_logo.png: Issue 1503: FBLite should have a visible sign it is running when starting hidden.